# fs

./: CMakeLists.txt  LICENSE  README.md
include/: fs.h
src/all/: fs.c
src/posix/: fs.c
src/win/: fs.c
